--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,49 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-
 buildscript {
     repositories {
-        jcenter()
+        mavenCentral()
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.2'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+    dependencies {
+        classpath "com.android.tools.build:gradle:1.1.3"
+        classpath "jp.leafytree.gradle:gradle-android-scala-plugin:1.4"
     }
 }
 
-allprojects {
-    repositories {
-        jcenter()
+repositories {
+    jcenter()
+}
+
+apply plugin: "com.android.application"
+apply plugin: "jp.leafytree.android-scala"
+
+android {
+    compileSdkVersion "android-22"
+    buildToolsVersion "22.0.1"
+
+    defaultConfig {
+        targetSdkVersion 22
+        versionCode 1
+        versionName "1.0"
+        multiDexEnabled true
     }
+
+    dexOptions {
+        preDexLibraries false
+        javaMaxHeapSize "2g"
+    }
+
+    productFlavors {
+        dev {
+            minSdkVersion 21 // To reduce compilation time
+        }
+
+        prod {
+            minSdkVersion 8
+        }
+    }
+}
+
+dependencies {
+    compile "org.scala-lang:scala-library:2.11.6"
+    compile "com.android.support:multidex:1.0.1"
 }
