--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -8,14 +8,14 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name">
 
-        <receiver android:name=".EineUr">
+        <receiver android:name=".ProzentWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
 
             <meta-data
                 android:name="android.appwidget.provider"
-                android:resource="@xml/eine_ur_info" />
+                android:resource="@xml/prozent_widget_info" />
         </receiver>
     </application>
 
