--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         <receiver android:name=".ProzentWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+
             </intent-filter>
 
             <meta-data
@@ -18,5 +19,5 @@
                 android:resource="@xml/prozent_widget_info" />
         </receiver>
     </application>
-
+<!--irgendn kack-->
 </manifest>
