--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
 /build
 /captures
 *.jks
 *.apk
+
+
+/*.iml
+/.idea_modules
