--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.foodieboys.zentuhr">
+          package="org.foodieboys.zentuhr">
 
     <application
-        android:name="android.support.multidex.MultiDexApplication"
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name">
+            android:name="android.support.multidex.MultiDexApplication"
+            android:allowBackup="true"
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name">
 
         <receiver android:name=".ProzentWidget">
             <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+                <action android:name="android.intent.action.USER_PRESENT"/>
             </intent-filter>
 
             <meta-data
-                android:name="android.appwidget.provider"
-                android:resource="@xml/prozent_widget_info" />
+                    android:name="android.appwidget.provider"
+                    android:resource="@xml/prozent_widget_info"/>
         </receiver>
     </application>
-<!--irgendn kack-->
+    <!--irgendn kack-->
 </manifest>
