--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,10 +3,9 @@
           package="org.foodieboys.zentuhr">
 
     <application
-            android:name="android.support.multidex.MultiDexApplication"
+            android:label="@string/app_name"
             android:allowBackup="true"
-            android:icon="@drawable/ic_launcher"
-            android:label="@string/app_name">
+            android:icon="@drawable/ic_launcher">
 
         <receiver android:name=".ProzentWidget">
             <intent-filter>
