--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="org.foodieboys.zentuhr">
-
+    <!-- irgendn kack -->
     <application
-            android:label="@string/app_name"
             android:allowBackup="true"
-            android:icon="@drawable/ic_launcher">
-
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name">
         <receiver android:name=".ProzentWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
@@ -17,6 +16,14 @@
                     android:name="android.appwidget.provider"
                     android:resource="@xml/prozent_widget_info"/>
         </receiver>
+
+        <activity android:name=".Settings">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
     </application>
-    <!--irgendn kack-->
+
 </manifest>
