--- a/build.gradle
+++ b/build.gradle
@@ -43,4 +43,5 @@ android {
 dependencies {
     compile 'org.scala-lang:scala-library:2.11.7'
     compile 'com.android.support:appcompat-v7:22.2.1'
+    compile "org.scaloid:scaloid_2.11:4.1"
 }
