--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ android {
     compileSdkVersion "android-22"
     buildToolsVersion "22.0.1"
     defaultConfig {
-        minSdkVersion 10
+        minSdkVersion 15
         targetSdkVersion 16
         versionCode 4
         versionName "0.1"
@@ -44,4 +44,5 @@ dependencies {
     compile 'org.scala-lang:scala-library:2.11.7'
     compile 'com.android.support:appcompat-v7:22.2.1'
     compile "org.scaloid:scaloid_2.11:4.1"
+    compile project(':AutoFitTextViewLibrary')
 }
